--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-<!--Web version: 2021/10/26/16/48-->
+<!--Web version: 06/03/2024 -->
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
